[package]
name = "naive_one_time_secret"
version = "0.0.1"
authors = ["Cary Willard <2190221+CaryWillard@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sodiumoxide = "0.2.6"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.19"
serde = "1.0.118"
serde_json = "1.0.60"